# llm-iot-management

./: .env.template  README.md  pyproject.toml  swagger.json
data/: Sensor_Energy_Consumption.csv
data/hospital-movement/: README.md  date_time.txt  station_0ft.csv
data/hospital-movement/HCP_locations/: latent_positions_day_10.csv  latent_positions_day_2.csv  latent_positions_day_6.csv  latent_positions_day_7.csv  latent_positions_day_8.csv  latent_positions_day_9.csv
data/hospital-movement/dialysis_sessions/: patient_info_day_10.csv  patient_info_day_2.csv  patient_info_day_6.csv  patient_info_day_7.csv  patient_info_day_8.csv  patient_info_day_9.csv
results/algorithms/: naive_result.json  probabilistic_result.json
results/benchmark/: generate_figures.py
src/: __init__.py  main.py
src/agents/: agents.py
src/crew/: crew.py
src/db/: __init__.py  database.py  main.py  models.py  seed.py
src/mcp/: README.md  __init__.py  deployment.py  main.py  orchestration.py  plan_execution.py  plan_validation.py
src/mcp/algorithms/: README.md  __init__.py  cellulaire.py  naive.py  probabilistic.py
src/prompts/: __init__.py
src/prompts/edge-detection/: edge_detection.txt
src/prompts/system-management/: access_control.txt  deployment_monitoring.txt  device_orchestration.txt  diagnosis_support.txt  plan_execution.txt  (+2 more)
src/tasks/: README.md
src/test/: README.md  cellulaire.py  naive.py  probabilistic.py
src/ui/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
src/utils/: __init__.py  energy.py  system.py
(+70 files in other folders)
